--- a/ws/panopticum/package.json
+++ b/ws/panopticum/package.json
@@ -11,15 +11,20 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "vue": "^3.3.4",
     "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-shell": "^2"
+    "@tauri-apps/plugin-shell": "^2",
+    "pinia": "^2.2.8",
+    "vue": "^3.3.4",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2",
+    "@types/node": "^22.10.1",
     "@vitejs/plugin-vue": "^5.0.5",
+    "sass": "^1.81.0",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1",
-    "vue-tsc": "^2.0.22",
-    "@tauri-apps/cli": "^2"
+    "unplugin-vue-router": "^0.10.8",
+    "vite": "^5.4.11",
+    "vue-tsc": "^2.0.22"
   }
 }
