--- a/ws/panopticum/package.json
+++ b/ws/panopticum/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
+    "@vueuse/core": "^12.0.0",
+    "@webshrine/stdlib": "^0.0.1",
     "pinia": "^2.2.8",
     "vue": "^3.3.4",
     "vue-router": "^4.5.0"
