Fix: normalize package.json scripts

--- a/ws/core/package.json
+++ b/ws/core/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tauri dev"
+    "dev": "tauri dev",
+    "tauri": "tauri"
   },
   "keywords": [],
   "author": "",
