--- a/ws/ui/package.json
+++ b/ws/ui/package.json
@@ -10,18 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-icons/vue": "^1.0.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
     "@vueuse/core": "^12.0.0",
     "@webshrine/stdlib": "^0.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.468.0",
     "pinia": "^2.2.8",
+    "radix-vue": "^1.9.11",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.3.4",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
     "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.20",
     "sass": "^1.81.0",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.2.2",
     "unplugin-vue-router": "^0.10.8",
     "vite": "^5.4.11",
