--- a/ws/ui/package.json
+++ b/ws/ui/package.json
@@ -14,7 +14,6 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
     "@vueuse/core": "^12.0.0",
-    "@webshrine/stdlib": "^0.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.468.0",
@@ -23,7 +22,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "webshrine": "^0.0.9"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
