--- a/ws/ui/package.json
+++ b/ws/ui/package.json
@@ -23,11 +23,12 @@
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.3.4",
     "vue-router": "^4.5.0",
-    "webshrine": "^0.0.13"
+    "webshrine": "^0.0.14"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
     "autoprefixer": "^10.4.20",
     "sass": "^1.81.0",
     "tailwindcss": "^3.4.16",
