--- a/ws/ui/package.json
+++ b/ws/ui/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
     "@vueuse/core": "^12.2.0",
+    "@webshrine/vue": "^0.0.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.469.0",
