--- a/ws/ui/package.json
+++ b/ws/ui/package.json
@@ -36,6 +36,7 @@
     "typescript": "^5.7.2",
     "unplugin-vue-router": "^0.10.9",
     "vite": "^6.0.6",
+    "vite-plugin-html": "^3.2.2",
     "vue-tsc": "^2.2.0"
   }
 }
