--- a/ws/ui/package.json
+++ b/ws/ui/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-shell": "^2",
     "@vueuse/core": "^12.2.0",
     "@webshrine/vue": "^0.0.15",
