--- a/ws/ui/package.json
+++ b/ws/ui/package.json
@@ -14,10 +14,12 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-shell": "^2",
+    "@types/keyboardjs": "^2.5.3",
     "@vueuse/core": "^12.3.0",
     "@webshrine/vue": "^0.0.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "keyboardjs": "^2.7.0",
     "lucide-vue-next": "^0.469.0",
     "pinia": "^2.3.0",
     "radix-vue": "^1.9.12",
