Build `ui`: finish setup `unplugin-vue-router`

--- a/ws/ui/tsconfig.json
+++ b/ws/ui/tsconfig.json
@@ -17,6 +17,9 @@
       ]
     },
     "resolveJsonModule": true,
+    "types": [
+      "unplugin-vue-router/client"
+    ],
     "allowImportingTsExtensions": true,
     /* Linting */
     "strict": true,
