--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,10 @@
     "ws/core/Cargo.toml"
   ],
 
+  // UNPLUGIN VUE ROUTER
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.preferences.autoImportFileExcludePatterns": ["vue-router/auto$"],
+
   // ANTFU ESLINT CONFIG
   // Disable the default formatter, use eslint instead
   "prettier.enable": false,
