--- a/ws/core/Cargo.toml
+++ b/ws/core/Cargo.toml
@@ -22,6 +22,7 @@ crate-type = [
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
+walkdir = "2"
 tauri = { version = "2", features = [ "protocol-asset" ] }
 tauri-plugin-shell = "2"
 serde = { version = "1", features = [ "derive" ] }
