--- a/ws/core/Cargo.toml
+++ b/ws/core/Cargo.toml
@@ -23,6 +23,7 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 walkdir = "2"
+chrono = "0.4.39"
 tauri = { version = "2", features = [ "protocol-asset" ] }
 tauri-plugin-shell = "2"
 serde = { version = "1", features = [ "derive" ] }
