--- a/ws/core/Cargo.toml
+++ b/ws/core/Cargo.toml
@@ -24,6 +24,8 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 walkdir = "2"
 chrono = "0.4.39"
+log = "0.4.24"
+env_logger = "0.11.6"
 tauri = { version = "2", features = [ "protocol-asset" ] }
 tauri-plugin-shell = "2"
 serde = { version = "1", features = [ "derive" ] }
