--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
     "panopticum"
   ],
   "rust-analyzer.linkedProjects": [
-    "ws/core/Cargo.toml"
+    "ws/core/Cargo.toml",
+    "ws/schemas/Cargo.toml",
   ],
 
   // UNPLUGIN VUE ROUTER
