--- a/ws/schemas/package.json
+++ b/ws/schemas/package.json
@@ -5,5 +5,12 @@
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "main": "./dist/index.ts"
+  "main": "./dist/index.ts",
+  "scripts": {
+    "dev": "nodemon --watch src --ext rs --exec \"npm run build\"",
+    "build": "typeshare ./src --lang=typescript --output-file=./dist/index.ts"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
