--- a/ws/schemas/package.json
+++ b/ws/schemas/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@panopticum/schemas",
+  "type": "module",
   "version": "0.0.0",
   "description": "",
   "author": "",
   "license": "ISC",
   "keywords": [],
+  "exports": {
+    "types": "./dist/index.ts",
+    "default": "./dist/index.ts"
+  },
   "main": "./dist/index.ts",
   "scripts": {
     "dev": "nodemon --watch src --ext rs --exec \"npm run build\"",
