--- a/ws/ui/package.json
+++ b/ws/ui/package.json
@@ -29,6 +29,7 @@
     "webshrine": "^0.0.18"
   },
   "devDependencies": {
+    "@panopticum/schemas": "link:..\\schemas",
     "@types/node": "^22.10.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
