Ref `ui`: move shadcn utils

--- a/ws/ui/components.json
+++ b/ws/ui/components.json
@@ -13,6 +13,6 @@
   "framework": "vite",
   "aliases": {
     "components": "@/shared/components",
-    "utils": "@/shared/utils"
+    "utils": "@/shared/utils/shadcn.ts"
   }
 }
