--- a/ws/core/Cargo.toml
+++ b/ws/core/Cargo.toml
@@ -39,4 +39,4 @@ serde = { version = "1", features = [ "derive" ] }
 serde_json = "1"
 tauri-plugin-fs = "2"
 rust_search = "2.1.0"
-md5 = "0.7.0"
+blake3 = "1.5.5"
