--- a/ws/core/Cargo.toml
+++ b/ws/core/Cargo.toml
@@ -32,7 +32,6 @@ panopticum_schemas = { path = "../schemas" }
 walkdir = "2"
 chrono = "0.4.39"
 log = "0.4.22"
-colog = "1.3.0"
 tauri = { version = "2", features = [ "protocol-asset" ] }
 tauri-plugin-shell = "2"
 serde = { version = "1", features = [ "derive" ] }
@@ -40,3 +39,4 @@ serde_json = "1"
 tauri-plugin-fs = "2"
 rust_search = "2.1.0"
 blake3 = "1.5.5"
+tauri-plugin-devtools = "2.0.0"
