--- a/ws/ui/package.json
+++ b/ws/ui/package.json
@@ -37,6 +37,7 @@
     "sass": "^1.84.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
+    "unplugin-vue-macros": "^2.14.2",
     "unplugin-vue-router": "^0.11.2",
     "vite": "^6.1.0",
     "vite-plugin-html": "^3.2.2",
