--- a/ws/ui/tsconfig.json
+++ b/ws/ui/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "vueCompilerOptions": {
+    "plugins": ["unplugin-vue-macros/volar"]
+  },
   "compilerOptions": {
     "target": "ES2020",
     "jsx": "preserve",
@@ -18,7 +21,8 @@
     },
     "resolveJsonModule": true,
     "types": [
-      "unplugin-vue-router/client"
+      "unplugin-vue-router/client",
+      "unplugin-vue-macros/macros-global"
     ],
     "allowImportingTsExtensions": true,
     /* Linting */
