--- a/ws/ui/package.json
+++ b/ws/ui/package.json
@@ -15,32 +15,33 @@
     "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-shell": "^2",
     "@types/keyboardjs": "^2.5.3",
-    "@vueuse/core": "^12.5.0",
-    "@webshrine/vue": "^0.0.20",
+    "@vueuse/core": "^13.5.0",
+    "@webshrine/vue": "^0.0.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "keyboardjs": "^2.7.0",
-    "lucide-vue-next": "^0.475.0",
-    "radix-vue": "^1.9.13",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "webshrine": "^0.0.20"
+    "lucide-vue-next": "^0.525.0",
+    "radix-vue": "^1.9.17",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1",
+    "webshrine": "^0.0.21"
   },
   "devDependencies": {
     "@panopticum/schemas": "link:..\\schemas",
-    "@types/node": "^22.13.1",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "autoprefixer": "^10.4.20",
-    "sass": "^1.84.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3",
-    "unplugin-vue-macros": "^2.14.2",
-    "unplugin-vue-router": "^0.11.2",
-    "vite": "^6.1.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/node": "^22.16.0",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "@vitejs/plugin-vue-jsx": "^5.0.1",
+    "autoprefixer": "^10.4.21",
+    "sass": "^1.89.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.8.3",
+    "unplugin-vue-macros": "^2.14.5",
+    "unplugin-vue-router": "^0.14.0",
+    "vite": "^7.0.2",
     "vite-plugin-html": "^3.2.2",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^3.0.1"
   }
 }
