--- a/ws/core/Cargo.toml
+++ b/ws/core/Cargo.toml
@@ -25,7 +25,10 @@ lto = false
 opt-level = 0
 
 [target.x86_64-pc-windows-msvc]
-rustflags = ["-C", "link-arg=/lld"]
+rustflags = [
+  "-C",
+  "link-arg=/lld"
+]
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
@@ -45,3 +48,4 @@ blake3 = "1.5.5"
 tauri-plugin-devtools = "2.0.0"
 ffmpeg-sidecar = "2.0.5"
 tokio = "1.43.0"
+thiserror = "2.0.11"
