--- a/ws/ui/package.json
+++ b/ws/ui/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
     "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-fs": "^2.2.0",
+    "@tauri-apps/plugin-fs": "^2.4.0",
     "@tauri-apps/plugin-shell": "^2",
     "@types/keyboardjs": "^2.5.3",
     "@vueuse/core": "^13.5.0",
@@ -22,6 +22,7 @@
     "keyboardjs": "^2.7.0",
     "lucide-vue-next": "^0.525.0",
     "radix-vue": "^1.9.17",
+    "tw-animate-css": "^1.3.5",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "webshrine": "^0.0.21"
