Build: upd cargo files

--- a/ws/core/Cargo.toml
+++ b/ws/core/Cargo.toml
@@ -19,10 +19,15 @@ crate-type = [
 ]
 
 [profile.dev]
-incremental = true
-strip = false
-lto = false
-opt-level = 0
+incremental = true # Compile your binary in smaller steps.
+# rustflags = [ "-Zthreads=8" ] # Better compile performance.
+
+[profile.release]
+codegen-units = 1 # Allows LLVM to perform better optimization.
+lto = true # Enables link-time-optimizations.
+opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
+panic = "abort" # Higher performance by disabling panic handlers.
+strip = true # Ensures debug symbols are removed.
 
 [target.x86_64-pc-windows-msvc]
 rustflags = [
@@ -31,21 +36,21 @@ rustflags = [
 ]
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = { version = "2.3.0", features = [] }
 
 [dependencies]
 panopticum_schemas = { path = "../schemas" }
 walkdir = "2"
-chrono = "0.4.39"
-log = "0.4.22"
-tauri = { version = "2", features = [ "protocol-asset" ] }
-tauri-plugin-shell = "2"
-serde = { version = "1", features = [ "derive" ] }
-serde_json = "1"
-tauri-plugin-fs = "2"
+chrono = "0.4.41"
+log = "0.4.27"
+tauri = { version = "2.6.2", features = [ "protocol-asset" ] }
+tauri-plugin-shell = "2.3.0"
+serde = { version = "1.0.219", features = [ "derive" ] }
+serde_json = "1.0.140"
+tauri-plugin-fs = "2.4.0"
 rust_search = "2.1.0"
 blake3 = "1.5.5"
 tauri-plugin-devtools = "2.0.0"
 ffmpeg-sidecar = "2.0.5"
-tokio = "1.43.0"
-thiserror = "2.0.11"
+tokio = "1.46.1"
+thiserror = "2.0.12"
