--- a/ws/ui/components.json
+++ b/ws/ui/components.json
@@ -8,7 +8,7 @@
     "css": "src/app/styles/global.css",
     "baseColor": "zinc",
     "cssVariables": true,
-    "prefix": "t_"
+    "prefix": "t"
   },
   "aliases": {
     "components": "@/shared/tp/shadcn/components",
